--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".LoginActivity">
+    tools:context=".login.LoginActivity">
 
     <EditText
         android:id="@+id/et_ID"
@@ -46,5 +46,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="회원가입" />
+
+    <Button
+        android:id="@+id/btn_noregister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="비회원으로 시작하기" />
 
 </LinearLayout>
