--- a/app/src/main/res/layout/updatetodolist.xml
+++ b/app/src/main/res/layout/updatetodolist.xml
@@ -35,11 +35,11 @@
         android:id="@+id/Textview2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="19dp"
-        android:layout_marginLeft="19dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
         android:text="Content"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/et_ucontent"
@@ -66,8 +66,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="201dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginRight="7dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Importance"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/et_uimportance"
@@ -79,8 +79,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="23dp"
-        android:layout_marginRight="23dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
         android:layout_marginBottom="2dp"
         android:layout_toRightOf="@+id/tv_importance"
         android:ems="10"
@@ -108,8 +108,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginRight="38dp"
         android:layout_toRightOf="@+id/tv_processHours"
         android:ems="10"
         android:inputType="textPersonName"
@@ -125,14 +125,14 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Date(y/m/d)"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/et_year"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/et_uprocessHours" />
 
     <EditText
         android:id="@+id/et_year"
@@ -144,7 +144,7 @@
         android:layout_toRightOf="@+id/tv_processHours"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/et_month"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_date"
         app:layout_constraintEnd_toStartOf="@+id/et_month"
         app:layout_constraintStart_toEndOf="@+id/tv_date" />
 
@@ -181,7 +181,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="69dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
