--- a/app/src/main/res/layout/todolist_list.xml
+++ b/app/src/main/res/layout/todolist_list.xml
@@ -7,11 +7,13 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="290dp"
+        android:layout_width="0dp"
         android:layout_height="54dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
