--- a/app/src/main/res/layout/updatetodolist.xml
+++ b/app/src/main/res/layout/updatetodolist.xml
@@ -10,54 +10,56 @@
         android:id="@+id/Textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="14dp"
         android:layout_marginRight="14dp"
+        android:layout_marginBottom="24dp"
         android:text="Title"
         android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/et_utitle"
-        app:layout_constraintTop_toTopOf="@+id/et_utitle" />
+        app:layout_constraintBottom_toTopOf="@+id/Textview2"
+        app:layout_constraintEnd_toStartOf="@+id/et_utitle" />
 
     <EditText
         android:id="@+id/et_utitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:background="@drawable/content"
         android:ems="10"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/et_ucontent"
-        app:layout_constraintEnd_toEndOf="@+id/et_ucontent" />
+        app:layout_constraintBottom_toTopOf="@+id/Textview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Textview" />
 
     <TextView
         android:id="@+id/Textview2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
+        android:layout_marginTop="129dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="Content"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/et_ucontent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/et_ucontent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_ucontent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="129dp"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="26dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginBottom="59dp"
+        android:background="@drawable/content"
         android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/et_uimportance"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Textview2" />
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="@+id/Textview3"
+        app:layout_constraintStart_toEndOf="@+id/Textview"
+        app:layout_constraintTop_toTopOf="@+id/et_utitle" />
+
 
     <TextView
         android:id="@+id/Textview3"
@@ -65,29 +67,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="201dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="271dp"
         android:text="Importance"
         android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/et_uimportance"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/et_uimportance"
+    <RatingBar
+        android:id="@+id/rb_uimportance"
+        style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="22dp"
-        android:layout_marginRight="22dp"
-        android:layout_marginBottom="2dp"
-        android:layout_toRightOf="@+id/tv_importance"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/Textview3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Textview3" />
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:isIndicator="false"
+        android:numStars="5"
+        android:stepSize="1.0"
+        app:layout_constraintStart_toEndOf="@+id/Textview3"
+        app:layout_constraintTop_toTopOf="@+id/Textview3" />
 
     <TextView
         android:id="@+id/Textview4"
@@ -95,9 +94,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="Hours"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/et_uprocessHours"
@@ -105,17 +104,21 @@
 
     <EditText
         android:id="@+id/et_uprocessHours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="38dp"
-        android:layout_marginRight="38dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:layout_toRightOf="@+id/tv_processHours"
+        android:background="@drawable/content"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/Textview4"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintBottom_toBottomOf="@+id/Textview4"
+        app:layout_constraintEnd_toEndOf="@+id/et_year"
+        app:layout_constraintStart_toStartOf="@+id/rb_uimportance"
+        app:layout_constraintTop_toTopOf="@+id/Textview4" />
 
     <TextView
         android:id="@+id/tv_date"
@@ -123,28 +126,28 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Date(y/m/d)"
         android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/et_year"
         app:layout_constraintEnd_toStartOf="@+id/et_year"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_uprocessHours" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/et_year"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
         android:layout_toRightOf="@+id/tv_processHours"
+        android:background="@drawable/content"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_date"
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_month"
         app:layout_constraintEnd_toStartOf="@+id/et_month"
         app:layout_constraintStart_toEndOf="@+id/tv_date" />
 
@@ -153,24 +156,28 @@
         android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="18dp"
-        android:layout_marginRight="18dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="93dp"
         android:layout_toRightOf="@+id/tv_processHours"
+        android:background="@drawable/content"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toStartOf="@+id/et_day"
         app:layout_constraintStart_toEndOf="@+id/et_year"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/rb_uimportance" />
 
     <EditText
         android:id="@+id/et_day"
         android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginRight="66dp"
         android:layout_toRightOf="@+id/tv_processHours"
+        android:background="@drawable/content"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/et_month"
@@ -181,26 +188,30 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="41dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginBottom="149dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_day">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Back" />
+            android:text="Back"
+            tools:layout_editor_absoluteX="-3dp"
+            tools:layout_editor_absoluteY="595dp" />
 
         <Button
             android:id="@+id/btn_update"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Update" />
-
+            android:text="Update"
+            tools:layout_editor_absoluteX="130dp"
+            tools:layout_editor_absoluteY="-102dp" />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
